--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,19 @@ frontend/node_modules/.cache/default-development/13.pack
 # Environment files
 *.env
 *.env.*
+-e 
+# Environment files
+*.env
+*.env.*
+-e 
+# Environment files
+*.env
+*.env.*
+-e 
+# Environment files
+*.env
+*.env.*
+-e 
+# Environment files
+*.env
+*.env.*
