--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,6 @@ aiohttp==3.13.2
 aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.11.0
-asyncpg==0.30.0
 attrs==25.4.0
 bcrypt==4.1.3
 black==25.9.0
@@ -21,12 +20,10 @@ fastapi==0.110.1
 flake8==7.3.0
 frozenlist==1.8.0
 greenlet==3.2.4
-h11==0.16.0
 idna==3.11
 iniconfig==2.3.0
 isort==7.0.0
 jmespath==1.0.1
-jq==1.10.0
 markdown-it-py==4.0.0
 mccabe==0.7.0
 mdurl==0.1.2
@@ -82,7 +79,4 @@ uvicorn==0.25.0
 watchfiles==1.1.1
 yarl==1.22.0
 beautifulsoup4==4.14.2
-lxml==6.0.2
-requests==2.32.5
-requests-oauthlib==2.0.0
-httpx==0.23.3
+lxml==6.0.2supabase==2.4.2
